# multithreadtextfinder

./: CMakeLists.txt  findtext.cpp  findtext.h  mtfind.cpp  task1.cpp  test_mtfind.cpp
