cmake_minimum_required(VERSION 3.0)
project(mtfind LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS_RELEASE " -Wall -O3")
add_executable(mtfind mtfind.cpp findtext.cpp data_distributor.cpp)
add_executable(test_mtfind  test_mtfind.cpp findtext.cpp data_distributor.cpp)
TARGET_LINK_LIBRARIES( mtfind pthread)
TARGET_LINK_LIBRARIES( test_mtfind pthread)
set(CPACK_PACKAGE_NAME "mtfind")
set(CPACK_PACKAGE_VERSION "1.0.0")
